fixed mobile x overflow?!

--- a/style.css
+++ b/style.css
@@ -105,8 +105,10 @@ hr {
 
 main .headcontainer,
 main .contcontainer {
+    width: 100%;
     max-width: fit-content;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .banner img {
@@ -206,6 +208,11 @@ footer {
     color: var(--detail-color);
 }
 
+body {
+    overflow-x: hidden;
+    /* Verhindert horizontales Scrollen */
+}
+
 #sec-aboutme,
 #sec-cv,
 #sec-pubs,
@@ -237,15 +244,15 @@ footer {
         height: 4rem;
         padding: .25rem 0;
         font-size: 12px;
+        width: 100%;
     }
 
     .navbar {
         bottom: 0;
-        width: 100vh;
+        width: 100%;
         height: 5rem;
     }
 
-    .logo,
     .link-text {
         display: none;
     }
@@ -256,6 +263,7 @@ footer {
 
     .nav-link {
         justify-content: center;
+        flex-grow: 1;
     }
 
     main {
